# CGomoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: animation.c  animation.h  app.c  app.h  board.c  board.h  gomoku.c  gomoku.h  main.c  render.c  render.h  test.c  test.h  ui.c  ui.h
src/scenes/: game.c  game.h  menu.c  menu.h  options.c  options.h  scene.c  scene.h
src/sdl/: mixer.c  mixer.h  render.c  render.h  texture.c  texture.h
